@@ -1,3 +1,10 @@
+2001-03-20  Benjamin Chelf  <chelf@codesourcery.com>
+
+	* qm/track/sql_idb.py (SqlIdb.GetIssues): import types. 
+	(SqlIdb.GetIssue): Change type IssueClass to
+	qm.track.issue_class.IssueClass to fix bug.
+	(SqlIdb.GetAllRevisions): Likewise.
+
 2001-03-18  Alex Samuel  <samuel@codesourcery.com>
 
 	* qm/graph.py: Fix code formatting.
